2011-12-08  Tim Waugh  <twaugh@redhat.com>

	* cupsipp.c: Fixed reference count issue with called object
	result (trac #17).

2011-12-06  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c, cupsmodule.c, cupsppd.c: Use
	Py_RETURN_NONE where appropriate.

	* cupsmodule.c, cupsppd.c: Fixed reference count issues with
	Py_None (trac #17).

2011-11-28  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: Fixed typo in fix for trac #16.

2011-11-25  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: HTTP_AUTHORIZATION_CANCELED constant requires
	CUPS 1.4 (trac #16).

	* cupsppd.c: Object lifecycle debugging.

2011-10-11  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.60.

2011-10-06  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: New constants defined.

2011-10-03  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.59.

2011-10-03  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (do_password_callback), cupsconnection.c
	(password_callback): Return NULL instead of the empty string
	when handling an exception or when the callback returned an
	empty string, and handle the callback returning None.

2011-07-26  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.58.

2011-07-25  Tim Waugh  <twaugh@redhat.com>

	* MANIFEST.in: New file.
	* Makefile: Use sdist for creating tarballs.

	* setup.py: Added more information ready for PyPI.

2011-07-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c: Applied patch from Gowtham Narisipalli to
	add adminExportSamba method.

2011-06-27  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Link against libiconv on darwin (trac #15).

	* cupsppd.c: Fixed feature test for getline() (trac #15).

2011-06-16  Tim Waugh  <twaugh@redhat.com>

	* postscriptdriver.prov: Increase timeout for dynamic driver
	listing.

2011-06-09  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.57.

	* postscriptdriver.prov: Get RPM_BUILD_ROOT from environment
	if not provided on command line (bug #712027).
